# dataops

./: jogo.py  pyproject.toml
.github/workflows/: ci-cd.yml
tests/: test_jogo.py
